# logging-demo

./: CMakeLists.txt  README.md  log.cpp  log.hpp  main.cpp
